...
    <item
        android:id="@+id/navigation_frequent_routes"
        android:icon="@drawable/ic_nav_frequent_routes_state"
        android:title="@string/nav_journeys"
        app:contentDescription="@string/nav_journeys_content_description" />
    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_nav_search_state"
        android:title="@string/nav_routes"
        app:contentDescription="@string/nav_routes_content_description" />
    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_nav_settings_state"
...
